# flipper-blackhat-os

./: .gitmodules  BLACKHAT_REFERENCE.md  Config.in  Dockerfile  LICENSE  README.md  build_armbian.sh  external.desc  external.mk  flash.sh  patch.sh
.github/workflows/: nightly.yml  push.yml  sd-card-image-build.yml
armbian_config/dotfiles/: alacritty.toml  i3_config  i3status_config  xinitrc
armbian_config/userpatches/: customize-image.sh
board/: boot.cmd  flipper-blackhat-a33.dts  flipper-blackhat.dts  uboot-flipper-blackhat-a33.dts
board/uboot/: flipper-blackhat-a33.dts
configs/: busybox.config  flipper_blackhat_a33_defconfig  flipper_blackhat_defconfig  linux_flipper_a33_defconfig  linux_nezha_defconfig  uboot-A33-OLinuXino_defconfig
docs/: DM-TFT34-485-MIPI-OG.c  DM-TFT34-485-MIPI-OG.txt  DM-TFT34-485-MIPI.txt  notes
genimage/: cmdline.txt  genimage.cfg  post-build.sh  readme.txt
package/bhtui/: CMakeLists.txt  Makefile
package/bhtui/src/: main.cpp  menu_app.cpp  menu_app.h  menu_builder.cpp  menu_builder.h  menu_item.cpp  menu_item.h
package/bjorn/: Config.in  bjorn.mk
package/blackhat/: Config.in  blackhat.mk  build.sh
package/opennds/: 0001-wlan.patch  0002-makefile.patch  0003-systemd.patch  0004-libmicrohttp.patch  0004-mktemp.patch  0006-systemd2.patch  Config.in  opennds.mk
package/python-getmac/: Config.in  python-getmac.mk
package/python-nmap/: Config.in  python-nmap.mk
package/python-pandas/: Config.in  (+1 more)
patch/: DM-TFT34-485-MIPI-OG.txt  panel-sitronix-st7701.c
patches/: 0002-rtw88.patch
rootfs_overlay/: .profile  .xinitrc
(+81 files in other folders)
